Melhorias e Ajustes