@@ -2,7 +2,6 @@ package com.pedidoms.services;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -13,61 +12,66 @@ import org.springframework.stereotype.Service;
 import com.pedidoms.dtos.ItemDto;
 import com.pedidoms.entities.Item;
 import com.pedidoms.repositories.ItemRepository;
-import com.pedidoms.validacoes.ValidacaoException;
 
 import jakarta.validation.Valid;
 
 @Service
 public class ItemService {
-	
+
 	@Autowired
 	private ItemRepository itemRepository;
-	
-	public Page<ItemDto> listarItens(Pageable pag){
+
+	public Page<ItemDto> listarItens(Pageable pag) {
 		return itemRepository.findAll(pag).map(ItemDto::new);
 	}
-	
+
 	public ResponseEntity<List<ItemDto>> listarItem(String nome) {
-		List<Item> itens =  itemRepository.findAllByNome(nome);
-		if(itens.isEmpty() || itens.equals(null))
-			throw new ValidacaoException("Não há itens com o nome: " + nome);
-		
-		List<ItemDto> itensDto = itens.stream()
-				.map(item -> new ItemDto(item.getNome()))
-				.collect(Collectors.toList());
+		List<Item> itens = itemRepository.findByNome(nome);
+		if (itens.isEmpty())
+			ResponseEntity.notFound().build();
+
+		List<ItemDto> itensDto = itens.stream().map(item -> new ItemDto(item.getNome())).toList();
 		return ResponseEntity.ok(itensDto);
 	}
-	
-	public ResponseEntity<ItemDto> adicionarItem(@Valid ItemDto itemDto) {
+
+	public ResponseEntity<ItemDto> adicionarItem(ItemDto itemDto) {
 		Item item = new Item(itemDto);
-		var itemBuscado =  itemRepository.findAllByNome(itemDto.nome());
-		if(!itemBuscado.isEmpty() || !itemBuscado.equals(null))
-			throw new ValidacaoException("Já existe cadastro de item com o nome: " + itemDto.nome() +  " !");
+		System.out.println(item);
+//		List<Item> itemBuscado = itemRepository.findByNome(itemDto.nome());
+//		System.out.println(itemBuscado);
+//		if (itemBuscado != null)
+//			throw new ValidacaoException("Já existe cadastro de item com o nome: " + itemDto.nome() + " !");
 		Item itemSalvo = itemRepository.save(item);
-		
+
 		return ResponseEntity.ok(new ItemDto(itemSalvo));
 	}
-	
-	public ResponseEntity<List<ItemDto>> adicionarItens(@Valid List<ItemDto> itensDto){
+
+	public ResponseEntity<List<ItemDto>> adicionarItens(List<ItemDto> itensDto) {
 		for (ItemDto itemDto : itensDto) {
 			Item itemSalvar = new Item(itemDto);
-			var itemBuscado =  itemRepository.findAllByNome(itemDto.nome());
-			if(!itemBuscado.isEmpty() || !itemBuscado.equals(null))
-				throw new ValidacaoException("Já existe cadastro de item com o nome: " + itemDto.nome() +  " !");
+			List<Item> itemBuscado = itemRepository.findByNome(itemDto.nome());
+			if (itemBuscado != null)
+				ResponseEntity.notFound().build();
 			itemRepository.save(itemSalvar);
 		}
 		return ResponseEntity.ok(itensDto);
-		
+
 	}
-	
-	public ResponseEntity<ItemDto> atualizarItem(Long id,@Valid ItemDto itemDto) {
-		if(!itemRepository.existsById(id))
-			throw new ValidacaoException("Não existe cadastro de item com esse id: " + id +  " !");
+
+	public ResponseEntity<ItemDto> atualizarItem(Long id, @Valid ItemDto itemDto) {
+		if (!itemRepository.existsById(id))
+			ResponseEntity.notFound().build();
 		Optional<Item> itemOp = itemRepository.findById(id);
-		Item item = itemOp.get();
-		item.setNome(itemDto.nome());
-		itemRepository.save(item);
-		return ResponseEntity.ok(itemDto);
+		Item item = null;
+
+		if (itemOp.isPresent()) {
+			item = itemOp.get();
+			item.setNome(itemDto.nome());
+
+			itemRepository.save(item);
+			return ResponseEntity.ok(itemDto);
+		}
+		return ResponseEntity.notFound().build();
 	}
-	
+
 }
